--- a/loginForm.html
+++ b/loginForm.html
@@ -1,5 +1,5 @@
 <html><body>
-<form action="login.php">
+<form action="login.php" method="POST">
 <input type="text" id="username">
 <input type="password" id="password">
 <input type="submit">
